# pxe-boot

./: .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  HostEntry.cs  HostsContext.cs  Makefile  Program.cs  README.md  WeatherForecast.cs  api.code-workspace  appsettings.json  pxe-boot-api-core.csproj  pxe-boot-api-core.http  pxe-boot-api-core.sln  pyproject.toml  release-please-config.json  requirements.in  requirements.txt
.github/workflows/: publish-image.yml  python-app.yml  python-lint-test.yml  release-please.yml  semantic-pr-title.yml
Controllers/: CrudControllerBase.cs  HostsController.cs  WeatherForecastController.cs
Data/: ApplicationDbContext.cs
Data/Dto/: PxeHost.cs  PxeProfile.cs
Data/Models/: PxeHost.cs  PxeProfile.cs
Data/Repositories/: HostRepository.cs  IRepositoryCrudBase.cs
Data/Results/: IResult.cs  Result.cs  ResultStatus.cs
Services/: HostService.cs  IServicesCrudBase.cs
src/: Containerfile  pxe-api.build  requirements.txt
src/app/: main.py
src/app/api/routers/: __init__.py  boot.py  healthcheck.py  host.py  profile.py
src/app/core/: config.py  db.py
src/app/models/: __init__.py  host.py  profile.py
src/app/repositories/: __init__.py  butane.py  host.py  profile_fs.py
src/app/schemas/: __init__.py  host.py  profile.py
tests/: conftest.py  test_healthcheck.py  test_host_repository.py  test_hosts_boot.py  test_hosts_update_delete.py  test_profiles_flow.py
